--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+beautifulsoup4==4.9.1
+bs4==0.0.1
 certifi==2020.4.5.2
 chardet==3.0.4
 click==7.1.2
@@ -11,6 +13,7 @@ PyJWT==1.7.1
 pytz==2020.1
 requests==2.23.0
 six==1.15.0
+soupsieve==2.0.1
 twilio==6.41.0
 urllib3==1.25.9
 Werkzeug==1.0.1
